--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Sokoban</h1>
     <div>
       <div id="levelButtons"></div>
+      <button id="dfsBtn">Solve DFS</button>
     </div>
     <canvas id="gameCanvas" width="700" height="480"></canvas>
     <script type="module" src="/src/main.js"></script>
