--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <h1>Sokoban</h1>
     <div>
       <div id="levelButtons"></div>
-      <button id="dfsBtn">Solve DFS</button>
+      <div>
+        <button id="dfsBtn">Solve DFS</button>
+        <button id="heuristicBtn">Solve heuristic</button>
+      </div>
     </div>
     <canvas id="gameCanvas" width="700" height="480"></canvas>
     <script type="module" src="/src/main.js"></script>
